@@ -209,6 +209,7 @@ from mnemosyne.libmnemosyne.databases.SQLite_media import SQLiteMedia
 from mnemosyne.libmnemosyne.databases.SQLite_logging import SQLiteLogging
 from mnemosyne.libmnemosyne.databases.SQLite_statistics import SQLiteStatistics
 
+
 class SQLite(Database, SQLiteSync, SQLiteMedia, SQLiteLogging,
              SQLiteStatistics):
 
@@ -488,12 +489,6 @@ class SQLite(Database, SQLiteSync, SQLiteMedia, SQLiteLogging,
             self._connection = None
             self._path = None
         return True
-
-    def add_savepoint(self, savepoint_name):
-        self.con.execute("savepoint ?", (savepoint_name, ))
-
-    def rollback_to_savepoint(self, savepoint_name):
-        self.con.execute("rollback to savepoint ?", (savepoint_name, ))
 
     def abandon(self):
         self._connection = None
